--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,9 @@ ul, ol{
 }
 #menu a.navbar-brand {
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 50px;
 	padding: 15px 10px 10px 10px;
-    color: #89bdd3;
+    color: #FF0000;
     font-weight: 900;
 	
 }
@@ -316,7 +316,7 @@ ul, ol{
  ********* 05 Header/Home Section **********
  *******************************************/
 #home{
-	background: url(../img/coverphoto.jpg);
+	background: url(../img/back2.jpeg);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
